--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "babel-cli": "^6.1.18",
     "babel-core": "^6.1.21",
+    "babel-preset-es2015": "^6.1.18",
     "coffee-script": "^1.10.0",
     "mocha": "^2.3.3"
   },
