--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "babel-core": "^6.1.21",
     "babel-preset-es2015": "^6.1.18",
     "coffee-script": "^1.10.0",
-    "mocha": "^2.3.3"
+    "mocha": "^2.3.3",
+    "mock-fs": "^3.7.0"
   },
   "dependencies": {
     "lodash": "^3.10.1"
