--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "compile": "./node_modules/babel-cli/bin/babel.js -d lib src/",
     "prepublish": "npm run compile",
-    "test": "mocha --compilers js:babel-core/register,coffee:coffee-script/register",
+    "test": "mocha --compilers js:babel-core/register",
     "test:watch": "npm run test -- -w"
   },
   "repository": {
@@ -23,7 +23,6 @@
     "babel-cli": "^6.1.18",
     "babel-core": "^6.1.21",
     "babel-preset-es2015": "^6.1.18",
-    "coffee-script": "^1.10.0",
     "mocha": "^2.3.3",
     "mock-fs": "^3.7.0"
   },
