--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "compile": "./node_modules/babel-cli/bin/babel.js -d lib src/",
     "prepublish": "npm run compile",
-    "test": "mocha --compilers js:babel-core/register",
+    "test": "mocha --require babel-polyfill --compilers js:babel-core/register",
     "test:watch": "npm run test -- -w"
   },
   "repository": {
@@ -20,13 +20,17 @@
   },
   "homepage": "https://github.com/rohanorton/batch-file-renamer#readme",
   "devDependencies": {
-    "babel-cli": "^6.1.18",
-    "babel-core": "^6.1.21",
-    "babel-preset-es2015": "^6.1.18",
+    "babel-cli": "^6.5.1",
+    "babel-core": "^6.5.2",
+    "babel-plugin-transform-runtime": "^6.5.2",
+    "babel-polyfill": "^6.5.0",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
     "mocha": "^2.3.3",
     "mock-fs": "^3.7.0"
   },
   "dependencies": {
+    "fs-promise": "^0.4.1",
     "lodash": "^3.10.1"
   }
 }
