--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "es6-promisify": "^3.0.0",
     "fs-promise": "^0.4.1",
-    "lodash": "^4.5.1"
+    "lodash": "^4.5.1",
+    "yargs-builder": "0.0.1"
   }
 }
