--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "babel-polyfill": "^6.5.0",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
+    "chai": "^3.5.0",
+    "chai-as-promised": "^5.2.0",
     "mocha": "^2.3.3",
     "mock-fs": "^3.7.0"
   },
