fsRenamer can perform cyclical rename
I had an issue where files [ a, b, c ] should be renamed [ b, c, a].
The only way to do this involved making some mediating point between.
So fsRenamer now moves all the sourcefiles to the tmp directory before
renaming. There are probably issues with doing this that I haven't
forseen :/

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "fs-promise": "^0.5.0",
     "has-callback": "0.0.3",
     "lodash": "^4.5.1",
+    "uuid": "^2.0.1",
     "yargs-builder": "0.0.1"
   }
 }
