--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "chalk": "^1.1.1",
+    "death": "git+https://github.com/rohanorton/node-death.git",
     "es6-promisify": "^3.0.0",
     "fs-promise": "^0.5.0",
     "has-callback": "0.0.3",
