Handle duplicate file destinations

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "chai": "^3.5.0",
     "chai-as-promised": "^5.2.0",
     "mocha": "^2.3.3",
-    "mock-fs": "^3.8.0"
+    "mock-fs": "^3.8.0",
+    "sinon": "^1.17.3"
   },
   "dependencies": {
     "chalk": "^1.1.1",
