--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "batch-file-renamer",
   "version": "0.0.0",
   "description": "Module to simplify writing node.js commandline applications that rename groups of files",
-  "main": "lib/index.js",
+  "main": "index.js",
   "scripts": {
     "compile": "./node_modules/babel-cli/bin/babel.js -d lib src/",
     "prepublish": "npm run compile",
@@ -24,7 +24,6 @@
     "babel-cli": "^6.5.1",
     "babel-core": "^6.5.2",
     "babel-plugin-transform-runtime": "^6.5.2",
-    "babel-polyfill": "^6.5.0",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "chai": "^3.5.0",
@@ -34,6 +33,7 @@
     "sinon": "^1.17.3"
   },
   "dependencies": {
+    "babel-polyfill": "^6.5.0",
     "chalk": "^1.1.1",
     "death": "git+https://github.com/rohanorton/node-death.git",
     "es6-promisify": "^3.0.0",
